--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="manifest" href="manifest.webmanifest">
+     <meta property="og:type" content="website">
+  <meta property="og:url" content="/">
+  <meta property="og:title" content="rabid rivals">
+  <meta property="og:description" content="theyre rabid">
+  <meta property="og:image" content="rabid.png">
   </head>
   <body>
     <div id="unity-container">
