--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="/">
   <meta property="og:title" content="rabid rivals">
   <meta property="og:description" content="theyre rabid">
-  <meta property="og:image" content="rabid.png">
+  <meta property="og:image" content="/rabid.png">
   </head>
   <body>
     <div id="unity-container">
